--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,13 @@ button:hover {
     justify-content: space-evenly;
 }
 
+.tax-tool {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 @media (max-width: 768px) {
     header {
         flex-direction: column;
